--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,8 +11,9 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/root.jsx"></script>
+    <script src="/debug-login.js"></script>
   </body>
-  </html>
+</html>
 
 
 
